2010-05-30  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw.d (interrupt_thread): make sure interrupt will not be lost when
	interrupted thread is waiting on mutex or exemption
	* zthread.d (EXEMPTION-WAIT): store in thread struct associated mutex
	(xlock_lock_helper): when handling pending interrupts - lock internal
	mutex before entering "safe for gc/interrupt" region.

2010-05-28  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (getstack, gettime)
	(gisprime, gispseudoprime): fix declarations
	(make-internal-pari-object): return NIL when PTR is NULL
	(pari-reader): use MAKE-INTERNAL-PARI-OBJECT
	(pari-to-lisp@null): return NIL
	(primpart, primitive-part, maxprime): add declarations
	(make-initargs): do not upcase SYMBOL-NAME
	(convert-from-pari-10, convert-from-pari-11): use %COMPONENT
	(pari-get-integer-data, pari-set-integer-data): define using
	DEF-CALL-OUT and int_W because the order of words in the data
	segment of integers depend on whether PARI is build with gmp (low
	bytes first) or not (high bytes first); see
	<http://article.gmane.org/gmane.comp.mathematics.pari.user/1574>
	<http://pari.math.u-bordeaux.fr/archives/pari-users-1005/msg00008.html>
	(convert-to-pari@integer): use PARI-SET-INTEGER-DATA
	(convert-from-pari-1): use PARI-GET-INTEGER-DATA

2010-05-27  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (pari-mantissa): do not call PARI-LENGTH-RAW,
	use PARI-LENGTH-BYTE to avoid allocating an extra FOREIGN-VARIABLE
	(PARIINFO): define
	(pari-version): also return PARIINFO
	(legendre-polynomial, tchebychev-polynomial, hilbert-matrix)
	(pascal-triangle, binomial-coefficient, set-random-seed)
	(get-random-seed, pari-random): fix definitions
	(pari-effective-length-raw, pari-mantissa-eff):
	restore using PARI-LENGTH-BYTE
	(convert-from-pari-1, convert-from-pari-10): use PARI-MANTISSA-EFF

2010-05-26  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp: update all names to v2 using <pariold.h>