@@ -1,3 +1,8 @@
+2010-06-01  Sam Steingold  <sds@gnu.org>
+
+	* path.tst: fix bug#3009966: Problems with wild-inferiors in
+	DIRECTORY :FULL T
+
 2010-05-18  Sam Steingold  <sds@gnu.org>
 
 	* ext-clisp.tst: test *PRINT-CLOSURE* (RFE#3001956)
